sas-core/main/default/objects/MCENS_Callback__c/MCENS_Callback__c.object-meta.xml
<CustomObject>
    <description>Callbacks registered for the Marketing Cloud Event Notification Service.</description>
    <label>MC ENS Callback</label>
    <nameField>
        <label>Callback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC ENS Callbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>