sas-core/main/default/objects/MCENS_Callback__c/fields/CallbackId__c.field-meta.xml
<CustomField>
    <fullName>CallbackId__c</fullName>
    <description>The id of the callback in marketing cloud. The id is in a uuid format.</description>
    <externalId>true</externalId>
    <label>Callback Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>