sas-core/main/default/objects/MCENS_Callback__c/fields/CallbackUrl__c.field-meta.xml
<CustomField>
    <fullName>CallbackUrl__c</fullName>
    <description>The url to which the callback is posted.</description>
    <label>Callback Url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>