sas-core/main/default/objects/MCENS_Callback__c/fields/SignatureKey__c.field-meta.xml
<CustomField>
    <fullName>SignatureKey__c</fullName>
    <description>The key used to verify the requests to the callback.</description>
    <label>Signature Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>