sas-core/main/default/objects/MCENS_Callback__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>The uuid used to transmit the identity of the callback in Salesforce via the URL.</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>